Bug 280494 - KDE desktop shell crash on startup
Summary: KDE desktop shell crash on startup
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 277028 280013 283985 284067 284068 284432 284666 284831 284862 285021 285663 287661 290857 291880 292677 301084 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-21 01:15 UTC by David Yang
Modified: 2012-06-03 06:43 UTC (History)
17 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: nm09
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Yang 2011-08-21 01:15:59 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 3.0.0-2-desktop x86_64
Distribution: "openSUSE 12.1 Milestone 3 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
Starting up KDE.

- Unusual behavior I noticed:
The loading bar stopped at 100% for the grey bar and around 60% for the white bar.

I am using the factory repositories. Not sure which package broke things though. Nothing compiled from source, fresh new computer.

-- Backtrace:
Application: Plasma Desktop Shell (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  0x00007f81f2bd7f16 in WicdNetworkManager::createNetworkInterface (this=0x7fff77f4eeb0, uni=...) at /usr/src/debug/kdebase-workspace-4.6.0/solid/wicd/networkmanager.cpp:165
#7  0x00007f81f3bad00b in ?? () from /usr/lib64/libsolidcontrolnm09.so.4
#8  0x00007f81f3bad091 in Solid::Control::NetworkManagerNm09::networkInterfaces() () from /usr/lib64/libsolidcontrolnm09.so.4
#9  0x00007f81f46d6d7a in ?? () from /usr/lib64/kde4/plasma_applet_networkmanagement.so
#10 0x00007f81f46d8187 in QObject* KPluginFactory::createInstance<NetworkManagerApplet, QObject>(QWidget*, QObject*, QList<QVariant> const&) () from /usr/lib64/kde4/plasma_applet_networkmanagement.so
#11 0x00007f821424ac72 in KPluginFactory::create (this=0xd5ab60, iface=0x7f820a9f0e60 "Plasma::Applet", parentWidget=0x0, parent=0x0, args=..., keyword=<optimized out>) at /usr/src/debug/kdelibs-4.6.0/kdecore/util/kpluginfactory.cpp:203
#12 0x00007f820a8b42bb in create<Plasma::Applet> (args=..., keyword=..., parent=0x0, parentWidget=0x0, this=<optimized out>) at /usr/src/debug/kdelibs-4.6.0/kdecore/util/kpluginfactory.h:527
#13 createInstance<Plasma::Applet> (error=0x7fff77f4f300, args=..., parent=0x0, parentWidget=0x0, this=0xd9e600) at /usr/src/debug/kdelibs-4.6.0/kdecore/services/kservice.h:557
#14 createInstance<Plasma::Applet> (error=0x7fff77f4f300, args=..., parent=0x0, this=0xd9e600) at /usr/src/debug/kdelibs-4.6.0/kdecore/services/kservice.h:534
#15 Plasma::PluginLoader::loadApplet (this=<optimized out>, name=..., appletId=<optimized out>, args=<optimized out>) at /usr/src/debug/kdelibs-4.6.0/plasma/pluginloader.cpp:144
#16 0x00007f81fbc7845f in SystemTray::PlasmoidTask::setupApplet (this=0xd4f0d0, plugin=..., id=<optimized out>) at /usr/src/debug/kdebase-workspace-4.6.0/plasma/generic/applets/systemtray/protocols/plasmoid/plasmoidtask.cpp:134
#17 0x00007f81fbc76991 in SystemTray::PlasmoidProtocol::addApplet (this=0x9cbef0, appletName=..., id=72, parent=0xa11140) at /usr/src/debug/kdebase-workspace-4.6.0/plasma/generic/applets/systemtray/protocols/plasmoid/plasmoidtaskprotocol.cpp:102
#18 0x00007f81fbc77116 in SystemTray::PlasmoidProtocol::loadFromConfig (this=0x9cbef0, parent=0xa11140) at /usr/src/debug/kdebase-workspace-4.6.0/plasma/generic/applets/systemtray/protocols/plasmoid/plasmoidtaskprotocol.cpp:83
#19 0x00007f81fbc82328 in SystemTray::Applet::configChanged (this=0xa11140) at /usr/src/debug/kdebase-workspace-4.6.0/plasma/generic/applets/systemtray/ui/applet.cpp:207
#20 0x00007f820a87ec6b in Plasma::ContainmentPrivate::initApplets (this=0x879940) at /usr/src/debug/kdelibs-4.6.0/plasma/containment.cpp:463
#21 0x00007f820a8922cc in Plasma::CoronaPrivate::importLayout (this=0x7a1210, conf=<optimized out>, mergeConfig=224) at /usr/src/debug/kdelibs-4.6.0/plasma/corona.cpp:568
#22 0x00007f820a892e63 in Plasma::Corona::loadLayout (this=0x7385e0, configName=...) at /usr/src/debug/kdelibs-4.6.0/plasma/corona.cpp:496
#23 0x00007f820a892f43 in Plasma::Corona::initializeLayout (this=0x7385e0, configName=...) at /usr/src/debug/kdelibs-4.6.0/plasma/corona.cpp:399
#24 0x00007f82043c6962 in PlasmaApp::corona (this=0x6b8070) at /usr/src/debug/kdebase-workspace-4.6.0/plasma/desktop/shell/plasmaapp.cpp:794
#25 0x00007f82043c6c4c in PlasmaApp::setupDesktop (this=0x6b8070) at /usr/src/debug/kdebase-workspace-4.6.0/plasma/desktop/shell/plasmaapp.cpp:299
#26 0x00007f82043c8570 in PlasmaApp::qt_metacall (this=0x6b8070, _c=QMetaObject::InvokeMetaMethod, _id=18, _a=0x76d330) at /usr/src/debug/kdebase-workspace-4.6.0/build/plasma/desktop/shell/plasmaapp.moc:156
#27 0x00007f8213dc4a6a in QObject::event (this=0x6b8070, e=<optimized out>) at kernel/qobject.cpp:1211
#28 0x00007f8212f623c6 in QApplication::event (this=0x6b8070, e=0x77eff0) at kernel/qapplication.cpp:2486
#29 0x00007f8212f5fd14 in QApplicationPrivate::notify_helper (this=0x6c25d0, receiver=0x6b8070, e=0x77eff0) at kernel/qapplication.cpp:4445
#30 0x00007f8212f6822a in QApplication::notify (this=<optimized out>, receiver=0x6b8070, e=0x77eff0) at kernel/qapplication.cpp:4324
#31 0x00007f8214a529e6 in KApplication::notify (this=0x6b8070, receiver=0x6b8070, event=0x77eff0) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#32 0x00007f8213db0bfc in QCoreApplication::notifyInternal (this=0x6b8070, receiver=0x6b8070, event=0x77eff0) at kernel/qcoreapplication.cpp:732
#33 0x00007f8213db43f5 in sendEvent (event=0x77eff0, receiver=0x6b8070) at kernel/qcoreapplication.h:215
#34 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x611660) at kernel/qcoreapplication.cpp:1373
#35 0x00007f8213ddb783 in sendPostedEvents () at kernel/qcoreapplication.h:220
#36 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#37 0x00007f820f5ea1dd in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#38 0x00007f820f5ea9d8 in ?? () from /usr/lib64/libglib-2.0.so.0
#39 0x00007f820f5eaba9 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#40 0x00007f8213ddb91f in QEventDispatcherGlib::processEvents (this=0x6c22e0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#41 0x00007f8213004d8e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#42 0x00007f8213db0052 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#43 0x00007f8213db0265 in QEventLoop::exec (this=0x7fff77f50df0, flags=...) at kernel/qeventloop.cpp:201
#44 0x00007f8213db46ab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#45 0x00007f82043aeda8 in kdemain (argc=1, argv=0x67ee30) at /usr/src/debug/kdebase-workspace-4.6.0/plasma/desktop/shell/main.cpp:118
#46 0x00000000004075e9 in _start ()

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-08-21 18:32:03 UTC
Is your intention to use wicd to manage network connections? By the crashlog you are using wicd but with libsolidcontrolnm09, which should *not* be used together with wicd. If you do not want to use wicd change the Solid's backends' priorities in systemsettings -> Information Sources.
Comment 2 Lamarque V. Souza 2011-08-23 01:15:27 UTC
Git commit 1fc9d35b09afaca64f6ee0b003396cb70df806e0 by Lamarque V. Souza.
Committed on 23/08/2011 at 03:12.
Pushed by lvsouza into branch 'nm09'.

Ignore other non-binary compatible backends (NM-0.8 and Wicd) to prevent
crashes.

BUG: 280494
FIXED-IN: nm09

M  +1    -1    solidcontrolfuture/libs/solid/control/managerbase.cpp

http://commits.kde.org/networkmanagement/1fc9d35b09afaca64f6ee0b003396cb70df806e0
Comment 3 Lamarque V. Souza 2011-10-14 14:32:33 UTC
*** Bug 283985 has been marked as a duplicate of this bug. ***
Comment 4 Lamarque V. Souza 2011-10-15 16:21:46 UTC
*** Bug 284067 has been marked as a duplicate of this bug. ***
Comment 5 Lamarque V. Souza 2011-10-15 16:23:44 UTC
*** Bug 284068 has been marked as a duplicate of this bug. ***
Comment 6 Lamarque V. Souza 2011-10-15 21:15:36 UTC
*** Bug 280013 has been marked as a duplicate of this bug. ***
Comment 7 Lamarque V. Souza 2011-10-15 21:31:48 UTC
*** Bug 277028 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2011-10-19 16:38:36 UTC
*** Bug 284432 has been marked as a duplicate of this bug. ***
Comment 9 Lamarque V. Souza 2011-10-22 15:43:37 UTC
*** Bug 284666 has been marked as a duplicate of this bug. ***
Comment 10 Lamarque V. Souza 2011-10-23 22:56:38 UTC
*** Bug 284831 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2011-10-24 13:22:44 UTC
*** Bug 284862 has been marked as a duplicate of this bug. ***
Comment 12 Lamarque V. Souza 2011-10-26 16:50:55 UTC
*** Bug 285021 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2011-11-03 16:59:59 UTC
*** Bug 285663 has been marked as a duplicate of this bug. ***
Comment 14 Lamarque V. Souza 2011-11-27 13:29:49 UTC
*** Bug 287661 has been marked as a duplicate of this bug. ***
Comment 15 Christoph Feck 2012-01-07 14:16:47 UTC
*** Bug 290857 has been marked as a duplicate of this bug. ***
Comment 16 Lamarque V. Souza 2012-01-18 22:38:24 UTC
*** Bug 291880 has been marked as a duplicate of this bug. ***
Comment 17 Lamarque V. Souza 2012-01-29 12:17:07 UTC
*** Bug 292677 has been marked as a duplicate of this bug. ***
Comment 18 Jekyll Wu 2012-06-03 06:43:23 UTC
*** Bug 301084 has been marked as a duplicate of this bug. ***