Ignore other non-binary compatible backends (NM-0.8 and Wicd) to prevent crashes.

BUG: 280494
FIXED-IN: nm09